--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,9 @@ const currentYear = new Date().getFullYear();
 <footer>
 	<div class="group">
 		<p>
-			Designed & Developed in Portland with <a href="https://astro.build/">Astro</a>
-			<Icon icon="rocket-launch" size="1.2em" />
+			Designed & Developed in Bergen
 		</p>
-		<p>&copy; {currentYear} Jeanine White</p>
+		<p>&copy; {currentYear} Markus Steen</p>
 	</div>
 	<p class="socials">
 		<a href="https://twitter.com/me"> Twitter</a>
