--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,8 +11,7 @@ const textLinks: { label: string; href: string }[] = [
 
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: IconProps['icon'] }[] = [
-	{ label: 'Twitter', href: 'https://twitter.com/me', icon: 'twitter-logo' },
-	{ label: 'Twitch', href: 'https://twitch.tv/me', icon: 'twitch-logo' },
+	{ label: 'LinkedIn', href: 'https://www.linkedin.com/in/markus-steen-694164201/', icon: 'twitter-logo' },
 	{ label: 'GitHub', href: 'https://github.com/me', icon: 'github-logo' },
 	{ label: 'CodePen', href: 'https://codepen.io/me', icon: 'codepen-logo' },
 ];
