--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,11 +6,11 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<p>Java - Javascript - Ruby on rails.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
+		<h2>Ambisiøs</h2>
 		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
