--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,12 +5,12 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="About | Jeanine White" description="About Jeanine White Lorem Ipsum">
+<BaseLayout title="Om | Markus Steen" description="About Markus Steen">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
-				title="About"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
+				title="Om"
+				tagline="Takk for tiden! Les videre for å lære om meg og min bakgrunn."
 			>
 				<img
 					width="1553"
@@ -23,36 +23,49 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Background</h2>
 				<div class="content">
-					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
-					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
-					</p>
+					
+					
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<h3 class="section-title">2023 - Hawaii Pacific University</h3>
+					<div class="content">
+					<p>
+						Jeg valgte (så klart) å ta mitt 4. semester i Honolulu, Hawaii.
+
+						Her tar jeg fagene Computer Science 2, Programming, Public Speaking og International Relations.
+					</p>
+					</div>
+					<h3 class="section-title">Høyskolen Kristiania</h3>
+					<div class="content">
+					<p>
+						Jeg valgte å flytte teknologi fra "hobby" til "karriere" og startet på HR, Teknologi og digitalisering. Dette studiet
+						blander min teknologiske lidenskap med HR aspektet, noe jeg synes er spennende og relevant da vi ser mer og mer teknologi på arbeidsplassen.
+					</p>
+					</div>
+					<h3 class="section-title">Universitetet i Agder</h3>
+					<div class="content">
+					<p>
+						Jeg begynte min studietid i Markedsføring og Ledelse, da dette virket som en spennende linje og det var i nydelige Kristiansand. Jeg merket etter et år at dette ikke var for meg.
+						Men lærte mye verdifult om meg selv, retningen jeg vil og markedsføring.
+					</p>
+					</div>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<p>
+					Cloud Management<img
+					alt="skills"
+					width="40"
+					height="40"
+					src="/assets/skillsicons/cloud-server.png"/>
+				
+					
+					</p>
 				</div>
 			</section>
 		</main>
