--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,9 +4,9 @@ import ThemeToggle from './ThemeToggle.astro';
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-	{ label: 'Hjem', href: '/' },
+	{ label: 'Home', href: '/' },
 	{ label: 'Work', href: '/work/' },
-	{ label: 'Om', href: '/om/' },
+	{ label: 'about', href: '/about/' },
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
