--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,9 +4,9 @@ import ThemeToggle from './ThemeToggle.astro';
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-	{ label: 'Home', href: '/' },
-	{ label: 'Work', href: '/work/' },
-	{ label: 'about', href: '/about/' },
+	{ label: 'Hjem', href: '/' },
+	{ label: 'Arbeid', href: '/arbeid/' },
+	{ label: 'om', href: '/om/' },
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
@@ -21,7 +21,7 @@ const iconLinks: { label: string; href: string; icon: IconProps['icon'] }[] = [
 	<div class="menu-header">
 		<a href="/" class="site-title">
 			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
-			Jeanine White
+			Markus Steen
 		</a>
 		<menu-button>
 			<template>
