--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,7 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Hei! Mitt navn er Markus Steen"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
-					align="start"
+					tagline="Jeg er en nyskjerrig teknolog. "
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
@@ -81,10 +80,9 @@ const projects = (await getCollection('work'))
 
 			<section class="section with-background bg-variant">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Mentions</h3>
+					<h3>Favoritter</h3>
 					<p>
-						I have been fortunate enough to recieve praise for my work in several publications. Take
-						a look below to learn more.
+						Her er mine favoritt inspirasjonskilder
 					</p>
 				</header>
 
