--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -10,13 +10,13 @@ import Icon from './Icon.astro';
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Ambisiøs</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<h2>HR-Tech</h2>
+		<p>Bachelor innen HR-Tech. Systemer, automatisering og samhandling mellom menneske og maskin</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<h2>SAP</h2>
+		<p>Gjennomført Kurs og har erfaring med SAP.</p>
 	</div>
 </section>
 
