--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="Om | Markus Steen" description="About Markus Steen">
+<BaseLayout title="Om | Markus Steen" description="Om Markus Steen">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
