--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,13 +14,13 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Jeanine White"
-	description="Learn about Jeanine White's most recent projects"
+	title="Prosjekter | Markus Steen"
+	description="Lær mer om Markus sine prosjekter"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="My Work"
+				title="Prosjekter"
 				tagline="See my most recent projects below to get an idea of my past experience."
 				align="start"
 			/>
