--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Hei! Mitt navn er Markus Steen"
-					tagline="Jeg er en nyskjerrig teknolog. "
+					tagline="En nyskjerrig teknolog fra Romsdalen, med utdanning innen HR-Tech. "
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
@@ -54,8 +54,8 @@ const projects = (await getCollection('work'))
 		<main class="wrapper stack gap-20 lg:gap-48">
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<h3>Prosjekter</h3>
+					<p>Her er en smakebit på noen av mine prosjekter.</p>
 				</header>
 
 				<div class="gallery">
