--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,33 +23,37 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Background</h2>
 				<div class="content">
-					
+					<p>
+						Jeg er en 23 år gammel HR og teknologi student, med stor lidenskap for samarbeidet mellom menneske og maskin, mens på fritiden er jeg mye i naturen, trening eller på nye eventyr. Jeg er en svært utadvendt og energisk person, med syv års erfaring i salg fra Elkjøp som har gitt meg tryggheten i å håndtere utfordrende situasjoner med profesjonalitet og ro.
+					</p>
 					
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Education</h2>
+				<h2 class="section-title">Utdanning</h2>
 				<div class="content">
 					<h3 class="section-title">2023 - Hawaii Pacific University</h3>
 					<div class="content">
 					<p>
-						Jeg valgte (så klart) å ta mitt 4. semester i Honolulu, Hawaii.
-
-						Her tar jeg fagene Computer Science 2, Programming, Public Speaking og International Relations.
+						Jeg tilbrakte mitt 4.semester på Hawai’i Pacific University, for å utvide mine akademiske og kulturelle horisonter. Jeg valgte å studere et variert utvalg av fag, men med hovedfokus innen Computer Science som var tre av mine fem fag. 
+Gjennom dette utvekslingsprogrammet oppnådde jeg en sterk forståelse av programmeringsspråk som Java og Python, samt utviklet mine ferdigheter i muntlig kommunikasjon og mellommenneskelige relasjoner.
 					</p>
 					</div>
 					<h3 class="section-title">Høyskolen Kristiania</h3>
 					<div class="content">
 					<p>
-						Jeg valgte å flytte teknologi fra "hobby" til "karriere" og startet på HR, Teknologi og digitalisering. Dette studiet
-						blander min teknologiske lidenskap med HR aspektet, noe jeg synes er spennende og relevant da vi ser mer og mer teknologi på arbeidsplassen.
+						Jeg begynte å studere HR, teknologi og digitalisering ved Høyskolen Kristiania Bergen i august 2021. Som en del av dette programmet har jeg tilegnet meg inngående kunnskap om fagområdene SAP, HR og digitalisering gjennom kurs og prosjekter.
+
+Dette studiet har gitt meg muligheten til å utvikle sterke ferdigheter innenfor teknologi, samtidig som jeg lærer hvordan HR kan optimaliseres ved å bruke teknologiske verktøy og strategier.
+
+Mitt mål er å bruke denne utdannelsen til å bidra til utviklingen av HR og teknologi i organisasjoner, og å være en del av det stadig voksende digitale arbeidsmarkedet. Jeg tror at denne kombinasjonen av HR og teknologi vil være svært verdifull for fremtidens arbeidsplasser, og jeg ser frem til å være en del av det.
 					</p>
 					</div>
 					<h3 class="section-title">Universitetet i Agder</h3>
 					<div class="content">
 					<p>
-						Jeg begynte min studietid i Markedsføring og Ledelse, da dette virket som en spennende linje og det var i nydelige Kristiansand. Jeg merket etter et år at dette ikke var for meg.
-						Men lærte mye verdifult om meg selv, retningen jeg vil og markedsføring.
+						I 2020 begynte jeg på en bachelorgrad i Markedsføring og Ledelse, men etter å ha fullført noen fag og utforsket faget nærmere, innså jeg at dette ikke var den rette retningen for meg.
+Jeg ble imidlertid interresert i fagene Markedsføring og Rettslære, hvor jeg oppnådde toppkarakterer.
 					</p>
 					</div>
 				</div>
