--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>Java - Javascript - Ruby on rails.</p>
+		<p>Java - Javascript.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
@@ -16,7 +16,7 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>SAP</h2>
-		<p>Gjennomført Kurs og har erfaring med SAP.</p>
+		<p>SAP-consultan kuring og erfaring.</p>
 	</div>
 </section>
 
