--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,9 +34,8 @@ const projects = (await getCollection('work'))
 					tagline="En nyskjerrig teknolog fra Romsdalen, med utdanning innen HR-Tech. "
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Utvikler</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Selger</Pill>
 					</div>
 				</Hero>
 
