--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -15,7 +15,7 @@ const projects = (await getCollection('work')).sort(
 
 <BaseLayout
 	title="Prosjekter | Markus Steen"
-	description="Lær mer om Markus sine prosjekter"
+	description="Lær mer om mine prosjekter"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
