--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,8 +5,8 @@ import ThemeToggle from './ThemeToggle.astro';
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Hjem', href: '/' },
-	{ label: 'work', href: '/work/' },
-	{ label: 'about', href: '/about/' },
+	{ label: 'Prosjekter', href: '/work/' },
+	{ label: 'Om', href: '/about/' },
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
