--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 
 const {
-	title = 'Markus Steen portfolio',
+	title = 'Markus Steen Portfolio',
 	description = 'Markus Steen',
 } = Astro.props;
 ---
