--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,7 +21,7 @@ import Hero from '../components/Hero.astro';
 			</Hero>
 
 			<section>
-				<h2 class="section-title">Background</h2>
+				<h2 class="section-title">Bakgrunn</h2>
 				<div class="content">
 					<p>
 						Jeg er en 23 år gammel HR og teknologi student, med stor lidenskap for samarbeidet mellom menneske og maskin, mens på fritiden er jeg mye i naturen, trening eller på nye eventyr. Jeg er en svært utadvendt og energisk person, med syv års erfaring i salg fra Elkjøp som har gitt meg tryggheten i å håndtere utfordrende situasjoner med profesjonalitet og ro.
@@ -38,6 +38,9 @@ import Hero from '../components/Hero.astro';
 						Jeg tilbrakte mitt 4.semester på Hawai’i Pacific University, for å utvide mine akademiske og kulturelle horisonter. Jeg valgte å studere et variert utvalg av fag, men med hovedfokus innen Computer Science som var tre av mine fem fag. 
 Gjennom dette utvekslingsprogrammet oppnådde jeg en sterk forståelse av programmeringsspråk som Java og Python, samt utviklet mine ferdigheter i muntlig kommunikasjon og mellommenneskelige relasjoner.
 					</p>
+					<p>
+						
+					</p>
 					</div>
 					<h3 class="section-title">Høyskolen Kristiania</h3>
 					<div class="content">
@@ -47,6 +50,9 @@ Gjennom dette utvekslingsprogrammet oppnådde jeg en sterk forståelse av progra
 Dette studiet har gitt meg muligheten til å utvikle sterke ferdigheter innenfor teknologi, samtidig som jeg lærer hvordan HR kan optimaliseres ved å bruke teknologiske verktøy og strategier.
 
 Mitt mål er å bruke denne utdannelsen til å bidra til utviklingen av HR og teknologi i organisasjoner, og å være en del av det stadig voksende digitale arbeidsmarkedet. Jeg tror at denne kombinasjonen av HR og teknologi vil være svært verdifull for fremtidens arbeidsplasser, og jeg ser frem til å være en del av det.
+					</p>
+					<p>
+
 					</p>
 					</div>
 					<h3 class="section-title">Universitetet i Agder</h3>
@@ -59,7 +65,7 @@ Jeg ble imidlertid interresert i fagene Markedsføring og Rettslære, hvor jeg o
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Skills</h2>
+				<h2 class="section-title">Ferdigheter</h2>
 				<div class="content">
 					<p>
 					Cloud Management<img
