--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,14 +14,14 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="Prosjekter | Markus Steen"
-	description="Lær mer om mine prosjekter"
+	title="Arbeid | Markus Steen"
+	description="Lær mer om mitt arbeid"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="Prosjekter"
-				tagline="See my most recent projects below to get an idea of my past experience."
+				title="Arbeid"
+				tagline="Her er litt av det jeg har gjort."
 				align="start"
 			/>
 			<Grid variant="offset">
