--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,7 +5,7 @@ import ThemeToggle from './ThemeToggle.astro';
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Hjem', href: '/' },
-	{ label: 'Prosjekter', href: '/work/' },
+	{ label: 'Arbeid', href: '/work/' },
 	{ label: 'Om', href: '/about/' },
 ];
 
