--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -16,7 +16,12 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>SAP</h2>
-		<p>SAP-consultan kuring og erfaring.</p>
+		<p>SAP-konsulent kursing og erfaring.</p>
+	</div>
+	<div class="stack gap-2 lg:gap-4">
+		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Selger</h2>
+		<p>20.000+ fornøyde kunder i løpet av 7 år i Elkjøp.</p>
 	</div>
 </section>
 
