--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,22 +6,19 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>Java - Javascript.</p>
+		<p>Java - Javascript - Astro.
+			Selv om jeg ikke har omfattende erfaring innen full-stack-utvikling, har jeg en solid base i Java og JavaScript og er ivrig etter å lære mer om feltet. På lang sikt er jeg forpliktet til å bli en dyktig full-stack-utvikler og holde meg oppdatert på de nyeste bransjetrendene og teknologiene.
+		</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>HR-Tech</h2>
-		<p>Bachelor innen HR-Tech. Systemer, automatisering og samhandling mellom menneske og maskin</p>
-	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>SAP</h2>
-		<p>SAP-konsulent kursing og erfaring.</p>
+		<p>Bachelor innen HR-Tech. Systemer, automatisering og samhandling mellom menneske og maskin. Lærer mye om SAP på fritiden og har SAP-erfaring fra jobb.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Selger</h2>
-		<p>20.000+ fornøyde kunder i løpet av 7 år i Elkjøp.</p>
+		<p>20.000+ fornøyde kunder i løpet av 7 år i Elkjøp. Les mer under Arbeid!</p>
 	</div>
 </section>
 
