--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Bakgrunn</h2>
 				<div class="content">
 					<p>
-						Jeg er en 23 år gammel HR og teknologi student, med stor lidenskap for samarbeidet mellom menneske og maskin, mens på fritiden er jeg mye i naturen, trening eller på nye eventyr. Jeg er en svært utadvendt og energisk person, med syv års erfaring i salg fra Elkjøp som har gitt meg tryggheten i å håndtere utfordrende situasjoner med profesjonalitet og ro.
+						Jeg er en 23 år gammel HR og teknologi student, med stor lidenskap for samarbeidet mellom menneske og maskin, mens på fritiden er jeg mye i naturen, trening eller på nye eventyr. Jeg er en svært utadvendt og energisk person, med syv års erfaring i salg fra Elkjøp som har gitt meg tryggheten i å håndtere utfordrende situasjoner med profesjonalitet og ro. Jeg elsker å løpe og gå fjellturer, gjerne mellom workblocks.
 					</p>
 					
 				</div>
@@ -40,7 +40,7 @@ Gjennom dette utvekslingsprogrammet oppnådde jeg en sterk forståelse av progra
 					</p>
 					<br>
 					</div>
-					<h3 class="section-title">Høyskolen Kristiania</h3>
+					<h3 class="section-title">2021 - 2024 Høyskolen Kristiania</h3>
 					<div class="content">
 					<p>
 						Jeg begynte å studere HR, teknologi og digitalisering ved Høyskolen Kristiania Bergen i august 2021. Som en del av dette programmet har jeg tilegnet meg inngående kunnskap om fagområdene SAP, HR og digitalisering gjennom kurs og prosjekter.
@@ -51,10 +51,10 @@ Mitt mål er å bruke denne utdannelsen til å bidra til utviklingen av HR og te
 					</p>
 					<br>
 					</div>
-					<h3 class="section-title">Universitetet i Agder</h3>
+					<h3 class="section-title">2020 Universitetet i Agder</h3>
 					<div class="content">
 					<p>
-						I 2020 begynte jeg på en bachelorgrad i Markedsføring og Ledelse, men etter å ha fullført noen fag og utforsket faget nærmere, innså jeg at dette ikke var den rette retningen for meg.
+						Jeg begynte på en bachelorgrad i Markedsføring og Ledelse, men etter å ha fullført noen fag og utforsket faget nærmere, innså jeg at dette ikke var den rette retningen for meg.
 Jeg ble imidlertid interresert i fagene Markedsføring og Rettslære, hvor jeg oppnådde toppkarakterer.
 					</p>
 					</div>
